# KarutaDropGeneration

./: CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yaml
cmake/: FindWEBP.cmake
src/: main.c  main.cpp
